--- a/AegisBot/AegisBot.csproj
+++ b/AegisBot/AegisBot.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Implementations\Application.cs" />
     <Compile Include="Implementations\ApplicationService.cs" />
     <Compile Include="Implementations\EchoService.cs" />
+    <Compile Include="Implementations\ManagerService.cs" />
     <Compile Include="Implementations\QA.cs" />
     <Compile Include="Interfaces\IAegisService.cs" />
     <Compile Include="Implementations\ServiceFactory.cs" />
