Implement most of the application process in V2

--- a/.gitignore
+++ b/.gitignore
@@ -254,3 +254,6 @@ paket-files/
 /AegisBot/Auth.txt.txt
 /AegisBot/Auth.txt
 /AegisBot/Services
+/AegisBotV2/Auth.txt
+/AegisBotV2/Applications
+/AegisBotV2/ApplicationConfig
